kustomizations/core/ntfy/watchtower-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watchtower
  labels:
    app: watchtower
spec:
  replicas: 1
  selector:
    matchLabels:
      app: watchtower
  template:
    metadata:
      labels:
        app: watchtower
    spec:
      containers:
      - name: watchtower
        image: containrrr/watchtower
        resources:
          limits:
            memory: "64Mi"
            cpu: "200m"
      volumeMounts:
        - name: docker-socket
          mountPath: /var/run/docker.sock
      volumes:
      - name: docker-socket
        hostPath:
          path: /var/run/docker.sock
