kustomizations/core/ntfy/proxy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy-internal
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: ntfy-internal-proxy
