kustomizations/core/ntfy/watchtower-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: watchtower
spec:
  selector:
    app: watchtower
  ports:
  - port: 80
    targetPort: 80
