kustomizations/core/ntfy/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: ntfy.citocafecito.work
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ntfy
              port:
                number: 80
