kustomizations/core/ntfy/watchtower-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: watchtower
spec:
  # ingressClassName: cloudflare-tunnel
  rules:
  - host: watchtower.lan
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: watchtower
              port:
                number: 80
